Add likes and posts docs
