# routes/likes.js
@@ -6,6 +6,14 @@ const likeService = require("../services/like");
 const router = express.Router();
 
 router.get("/", paginate, async (req, res) => {
+    /*
+        #swagger.tags = ['Like']
+        #swagger.description = 'To get all the likes in the given page and size.'
+        #swagger.responses[200] = { 
+            schema: [{ $ref: "#/definitions/Like" }],
+            description: 'an array of likes'
+        } 
+    */
     try{
         const likes = await likeService.getAllLikes(req);
         res.send(likes);
@@ -16,6 +24,15 @@ router.get("/", paginate, async (req, res) => {
 })
 
 router.get("/:id", async (req, res) => {
+    /*
+        #swagger.tags = ['Like']
+        #swagger.description = 'to get a like data by given id."
+        #swagger.parameters["id"] = {description: "id of the like."}
+        #swagger.responses[200] = { 
+            schema: [{ $ref: "#/definitions/Like" }],
+            description: 'the like object'
+        } 
+    */
     try{
         const like = await likeService.getOneLike(req);
         res.send(like);
@@ -27,6 +44,19 @@ router.get("/:id", async (req, res) => {
 })
 
 router.post("/", auth, async (req, res) => {
+    /*
+        #swagger.tags = ['Like']
+        #swagger.description = 'to create a new like with a valid user token'
+        #swagger.requestBody = {
+            description: "userId will be interreted by token and postId will be only an Id!",
+            required: true,
+            schema: { $ref: "#/definitions/Like" }
+        }
+        #swagger.responses[200] = { 
+            schema: [{ $ref: "#/definitions/Like" }],
+            description: 'the new like object.'
+        } 
+    */
     try{
         const like = await likeService.createlike(req);
         res.send(like);
@@ -42,6 +72,15 @@ router.post("/", auth, async (req, res) => {
 })
 
 router.delete("/:id", auth,  async (req, res) => {
+    /*
+        #swagger.tags = ['Like']
+        #swagger.description = 'to delete a like data by given id and a the user's valid token.'
+        #swagger.parameters["id"] = {description: "id of the like."}
+        #swagger.responses[200] = { 
+            schema: [{ $ref: "#/definitions/Like" }],
+            description: 'the deleted like object'
+        } 
+    */
     try{
         const like = await likeService.deleteLike(req);
         res.send(like);
